--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#AB47BC</color>
     <color name="colorAccent">#9C27B0</color>
     <color name="colorBar">#18FFFF</color>
-    <color name="colorWhite">#7986CB</color>
+    <color name="colorWhite">#BA68C8</color>
     <color name="colorGreen">#64FFDA</color>
     <color name="colorAction">#AB47BC</color>
 </resources>
