--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/colorWhite"
-    android:orientation="vertical">
-    <SearchView
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
+    <android.support.v7.widget.SearchView
         android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:searchHintIcon="@color/colorWhite"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="20dp"
         android:hint="Search here"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        android:textSize="16sp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:textSize="16sp" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler"
+        android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/search" />
+        android:layout_below="@+id/search"
+        android:padding="8dp" />
 
 
 </RelativeLayout>
